fix button colors on mobile

--- a/src/components/AddButton.css
+++ b/src/components/AddButton.css
@@ -1,6 +1,7 @@
 .add{
   position:absolute;
   background-color:#A6A6A6;
+  color:#232323;
   left:93%;
   top:90%;
   border:none;
