--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,6 +9,7 @@
 
 .navbar-button{
   background-color: #A6A6A6;
+  color:#232323;
   border:none;
   padding:15px;
   border-radius: 20px 10px;
